--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,14 @@
 .App {
-  text-align: center;
-}
-*::selection{
+  text-align: center; }
+
+*::selection {
   background: #4FD1C5;
-  color: #1A202C;
-}
-h4, .label, td, h5{
-  cursor: default;
-}
-#root{
+  color: #1A202C; }
+
+h4, .label, td, h5 {
+  cursor: default; }
+
+#root {
   display: flex;
   min-height: 100vh;
   background-color: #1A202C;
@@ -18,10 +18,9 @@ h4, .label, td, h5{
   justify-content: space-around;
   align-content: flex-start;
   padding: 0 max(calc(50vw - 400px), 1em) 2em;
-  width: 100vw;
-}
+  width: 100vw; }
 
-.allergyButton{
+.allergyButton {
   background-color: transparent;
   cursor: pointer;
   display: inline;
@@ -29,50 +28,44 @@ h4, .label, td, h5{
   border: none;
   padding: 1em;
   margin: 8px;
-  border-radius: 40px;
-}
+  border-radius: 40px; }
 
-.allergyButton img{
+.allergyButton img {
   display: inline;
-  vertical-align: middle; 
-}
+  vertical-align: middle; }
 
-.allergyButton span{
+.allergyButton span {
   vertical-align: middle;
-  font-size: 14px;
-}
+  font-size: 14px; }
 
-.allergyButton:hover{
+.allergyButton:hover {
   background-color: #B2F5EA;
-  color: #2D3748;
-} 
-.selected{
-  background-color: #4FD1C5 !important;
-  color: #1A202C !important;
-}
+  color: #2D3748; }
 
-.rangeSliderWrapper{
+.selected {
+  background-color: #4FD1C5 !important;
+  color: #1A202C !important; }
+
+.rangeSliderWrapper {
   display: inline-flex;
   width: 20em;
   margin: 45px 20px;
-  max-width: 100vw;
-}
+  max-width: 100vw; }
 
-.label{
-  margin-right: 2em;
-}
+.label {
+  margin-right: 2em; }
 
-.thumb{
+.thumb {
   transform: translateY(-35px);
-  background-color: rgba(255, 255, 255, 1);
+  background-color: white;
   padding: 8px;
   border-radius: 16px;
   font-size: 10px;
   text-emphasis: bold;
   position: relative;
-  color:#1A202C
-}
-.thumb::after{
+  color: #1A202C; }
+
+.thumb::after {
   content: "";
   position: absolute;
   bottom: -4px;
@@ -82,11 +75,10 @@ h4, .label, td, h5{
   height: 0;
   border-left: 4px solid transparent;
   border-right: 4px solid transparent;
-  border-top: 6px solid rgba(255, 255, 255, 1);
-}
+  border-top: 6px solid white; }
 
-input[type="checkbox"]{
-  background: rgb(49, 49, 49);
+input[type="checkbox"] {
+  background: #313131;
   transition: box-shadow .3s;
   background: #2D3748;
   appearance: none;
@@ -94,48 +86,48 @@ input[type="checkbox"]{
   width: 15px;
   border: 0;
   border-radius: 20%;
-  margin: 4px;
-}
-input:hover, label:hover, a{
-  cursor: pointer;
-}
-input:checked { 
-  box-shadow: inset 0 0 0 20px #4FD1C5;
-}
-.checkboxContainer{
+  margin: 4px; }
+
+input:hover, label:hover, a {
+  cursor: pointer; }
+
+input:checked {
+  box-shadow: inset 0 0 0 20px #4FD1C5; }
+
+.checkboxContainer {
   display: inline-flex;
-  margin: 8px 10px;
-}
-h4{
+  margin: 8px 10px; }
+
+h4 {
   font-size: 24px !important;
-  color: white;  
+  color: white;
   display: block;
   width: 100vw;
-  font-weight: 600 !important;
-}
-header{
+  font-weight: 600 !important; }
+
+header {
   background-color: #2D3748;
   text-align: center;
   width: 100vw;
   font-size: 36px;
   color: #4FD1C5;
-  font-weight: 900;
-}
-body{
+  font-weight: 900; }
+
+body {
   background-color: #4FD1C5 !important;
-  overflow-x: hidden !important;
-}
-section{
+  overflow-x: hidden !important; }
+
+section {
   display: flex;
   flex-wrap: wrap;
   width: calc(100vw - 40px);
   max-width: 800px;
-  padding: 1em 0;
-}
-sup{
-  font-size: 12px;
-}
-textarea{
+  padding: 1em 0; }
+
+sup {
+  font-size: 12px; }
+
+textarea {
   display: block;
   width: 100%;
   margin: 10px 0 !important;
@@ -143,133 +135,137 @@ textarea{
   border-radius: 10px;
   border-bottom-right-radius: 0;
   padding: 5px !important;
-  min-height: 30px;
-}
-button:focus-visible, textarea:focus, textarea:active{
-  outline: 0.4mm dashed #4FD1C5;
-}
-.textareaContainer{
-  font-size: 14px;
-}
-input[type='submit']{
+  min-height: 30px; }
+
+button:focus-visible, textarea:focus, textarea:active {
+  border: 0.4mm dashed #4FD1C5;
+  outline: none; }
+
+.textareaContainer {
+  font-size: 14px; }
+
+input[type='submit'] {
   margin: 1em auto;
   color: #1A202C;
   background-color: #4FD1C5;
   font-size: 20px;
   padding: 15px;
-  border-radius: 2em;
-}
-:disabled{
+  border-radius: 2em; }
+
+:disabled {
   /* pointer-events: none; */
   background-color: #B2F5EA !important;
-  cursor: not-allowed !important;
-}
+  cursor: not-allowed !important; }
 
-.results{
+.results {
   min-height: 50px;
-  text-align: center;
-}
+  text-align: center; }
 
-.results h5{
+.results h5 {
   color: #52607a;
   font-size: 18px;
-  margin: 1em auto;
-}
-.results h6{
+  margin: 1em auto; }
+
+.results h6 {
   color: #4FD1C5;
   font-size: 20px;
   font-weight: 600;
-  border-bottom: 1px dashed #52607a;
-}
-td:first-of-type, th:first-of-type{
-  text-align: left;
-}
-td{
+  border-bottom: 1px dashed #52607a; }
+
+td:first-of-type, th:first-of-type {
+  text-align: left; }
+
+td {
   max-width: 40vw;
   text-align: right;
-  color: rgb(111, 122, 143);
-}
-tr:hover td{
-  color: #EDF2F7 !important;
-}
-th:nth-of-type(2), td:nth-of-type(2){
-  padding-right: 1em;
-}
-.menuContainer{
-  margin: 1em;
-}
-.saveButton{
+  color: #6f7a8f; }
+
+tr:hover td {
+  color: #EDF2F7 !important; }
+
+th:nth-of-type(2), td:nth-of-type(2) {
+  padding-right: 1em; }
+
+.menuContainer {
+  margin: 1em; }
+
+.saveButton {
   color: #4FD1C5 !important;
-  transition: 0.1s;
-}
-.saveButton:after{
-  display:block;
+  transition: 0.1s; }
+
+.saveButton:after {
+  display: block;
   content: '';
-  border-bottom: solid 2px #4FD1C5;  
-  transform: scaleX(0);  
+  border-bottom: solid 2px #4FD1C5;
+  transform: scaleX(0);
   transition: transform 250ms ease-in-out;
-  transform-origin: 0% 50%;
-}
-.saveButton:hover:after{
-  transform: scaleX(1);
-}
-.hidden{
-  display: none;
-}
+  transform-origin: 0% 50%; }
+
+.saveButton:hover:after {
+  transform: scaleX(1); }
+
+.hidden {
+  display: none; }
 
 #snackbar {
-  visibility: hidden; 
-  background-color: #90ee90; 
-  color: #000000; 
+  visibility: hidden;
+  background-color: #90ee90;
+  color: #000000;
   text-align: center;
-  border-radius: 15px; 
-  padding: 8px; 
+  border-radius: 15px;
+  padding: 8px;
   position: fixed;
-  z-index: 1; 
+  z-index: 1;
   margin: 0 50%;
-  bottom: 30px; 
+  bottom: 30px;
   font-size: 0.8em;
   min-width: max-content;
   text-rendering: optimizeLegibility;
   display: flex;
-  align-items: center;
-}
-
-
+  align-items: center; }
 
 #snackbar.show {
-  visibility: visible; 
+  visibility: visible;
   -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
-  animation: fadein 0.5s, fadeout 0.5s 2.5s;
-}
-
+  animation: fadein 0.5s, fadeout 0.5s 2.5s; }
 
 @-webkit-keyframes fadein {
-  from {bottom: 0; opacity: 0;}
-  to {bottom: 30px; opacity: 1;}
-}
+  from {
+    bottom: 0;
+    opacity: 0; }
+  to {
+    bottom: 30px;
+    opacity: 1; } }
 
 @keyframes fadein {
-  from {bottom: 0; opacity: 0;}
-  to {bottom: 30px; opacity: 1;}
-}
+  from {
+    bottom: 0;
+    opacity: 0; }
+  to {
+    bottom: 30px;
+    opacity: 1; } }
 
 @-webkit-keyframes fadeout {
-  from {bottom: 30px; opacity: 1;}
-  to {bottom: 0; opacity: 0;}
-}
+  from {
+    bottom: 30px;
+    opacity: 1; }
+  to {
+    bottom: 0;
+    opacity: 0; } }
 
 @keyframes fadeout {
-  from {bottom: 30px; opacity: 1;}
-  to {bottom: 0; opacity: 0;} 
-}
+  from {
+    bottom: 30px;
+    opacity: 1; }
+  to {
+    bottom: 0;
+    opacity: 0; } }
 
-section + h5{
+section + h5 {
   color: white;
-  font-weight: 800;
-}
+  font-weight: 800; }
 
-section+h5 span{
+section + h5 span {
   padding: 2px;
   /* font-weight: 800; */
   background: linear-gradient(45deg, #3494f9, #00ff95);
@@ -280,20 +276,28 @@ section+h5 span{
   background-clip: text;
   -moz-background-clip: text;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
+  -webkit-text-fill-color: transparent; }
+
 @-webkit-keyframes gradientTransition {
-  0%{background-position:0% 50%}
-  50%{background-position:100% 51%}
-  100%{background-position:0% 50%}
-}
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 51%; }
+  100% {
+    background-position: 0% 50%; } }
+
 @-moz-keyframes gradientTransition {
-  0%{background-position:0% 50%}
-  50%{background-position:100% 51%}
-  100%{background-position:0% 50%}
-}
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 51%; }
+  100% {
+    background-position: 0% 50%; } }
+
 @keyframes gradientTransition {
-  0%{background-position:0% 50%}
-  50%{background-position:100% 51%}
-  100%{background-position:0% 50%}
-}
+  0% {
+    background-position: 0% 50%; }
+  50% {
+    background-position: 100% 51%; }
+  100% {
+    background-position: 0% 50%; } }
