--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@
   text-align: center; }
 
 @media screen and (max-width: 800px){
-  *:not(input.field) {    
+  *:not(textarea) {    
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
